--- a/codegen-gui/pom.xml
+++ b/codegen-gui/pom.xml
@@ -20,9 +20,15 @@
             <groupId>de.chrlembeck.codegen</groupId>
             <artifactId>codegen-generator</artifactId>
         </dependency>
+        <!-- 
         <dependency>
             <groupId>de.chrlembeck.codegen</groupId>
             <artifactId>codegen-modeller</artifactId>
+        </dependency>
+         -->
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
