--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>de.chrlembeck.codegen</groupId>
@@ -8,14 +8,22 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>./codegen-parent/pom.xml</relativePath>
     </parent>
+
+    <licenses>
+        <license>
+            <name>BSD-3</name>
+        </license>
+    </licenses>
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.chrlembeck.codegen</groupId>
     <artifactId>codegen-complete</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
+
     <modules>
-        <module>codegen-parent</module>
         <module>antlr-editorkit</module>
+        <module>codegen-parent</module>
         <module>codegen-generator</module>
         <module>codegen-gui</module>
         <module>codegen-modeller</module>
@@ -23,6 +31,4 @@
         <module>codegen-example-model</module>
         <module>codegen-example-project</module>
     </modules>
-    <build>
-  </build>
 </project>
